--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ segments.txt
 /.vs/video-retalking/FileContentIndex
 /.vs/video-retalking/v17
 /.vs/ProjectSettings.json
+/.vs/slnx.sqlite-journal
+/.vs/VSWorkspaceState.json
